updated release notes and resolved double scroll bar issue

--- a/src/RideChicago/AutoBundle/Resources/public/css/ext-override.css
+++ b/src/RideChicago/AutoBundle/Resources/public/css/ext-override.css
@@ -47,6 +47,6 @@ label.fieldDescription {
 
 html,
 body {
-	overflow: hidden;
-	height: 100%;
+	overflow: hidden !important;
+	height: 100% !important;
 }
